--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <center>
                     <img src="./_img/sonic2.png" class="d-block w-10" alt="...">
                 </center>
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block text-dark">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                 </div>
